Hardened CaseManagementService with input validation, explicit action-to-status mapping, timestamped note appending, and detailed audit payloads including status transitions